--- a/shop.html
+++ b/shop.html
@@ -27,9 +27,11 @@
           <li id="logo-bag">
             <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
           </li>
+
           <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
         </ul>
       </div>
+      <!-- -------------------menu bar---------------- -->
       <div id="mobile">
         <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
         <i id="bar" class="fa-solid fa-bars"></i>
